k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickify-frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: tickify-frontend
  ports:
    - port: 80
      targetPort: 3000
