k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickify-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: tickify-backend
  ports:
    - port: 80
      targetPort: 8080
